2012-06-18  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* bootstrap.sh: added --add-missing to bootstrap.sh

2012-05-24  Simson Garfinkel  <simsong@it153582.ern.nps.edu>

	* configure.ac: increased version to 1.2.7.

	* src/main.cpp (main):  -r option now allows for multiple files to be specified.

	* src/main.cpp (main):  -R option now allows for incomplete tcp connections to be finished.

2012-05-16  Simson Garfinkel  <simsong@Mucha.local>

	* src/main.cpp (main): removed global "tcpdemux demux"
	variable. Now it's passed as *user in the datalink methods, as it
	should be.

	* src/tcpdemux.h (class tcpip): bytes_printed renamed to bytes_processed, as it will be used in packet processing as well.

2012-04-19  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac: incremented version to 1.2.6 (1.2.5 had a bad tag)
	

	* src/tcpip.cpp (tcpip::print_packet): fixed error in fwrite().

2012-04-11  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* created version 1.2.4 tag

2012-04-03  Simson Garfinkel  <simsong@imac3.home>

	* src/main.cpp (print_usage): fixed misspelling of name

	* src/tcpip.cpp (tcpdemux::tcpdemux): default outdir is now "."

2012-03-26  Simson Garfinkel  <simsong@imac3.home>

	* src/xml.cpp (xml::add_cpuid): better handling of CPUID instruction. Now it really should not show up on non-Intel architectures.

2012-03-19  Simson Garfinkel  <simsong@imac3.home>

	* src/xml.cpp: added unistd.h

2012-03-18  Simson Garfinkel  <simsong@imac3.local>

	* src/main.cpp (main): added printing stats for debug level 3.

	* src/datalink.cpp (find_handler): changed 'looking for handler' to debug level 2.

2012-03-18  Simson Garfinkel  <simsong@imac3.home>

	* src/tcpip.cpp (tcpdemux::close_all): Jeremey's FD ring has been replaced with an unordere dset.

	* src/tcpdemux.h (class tcpdemux): tcpdemux is now a class. By 1.3 it will be a linkable class separate from this program.

2012-03-11  Simson L. Garfinkel  <simsong@ps14412.dreamhostps.com>
