@@ -176,7 +176,7 @@ public:
     void xmlout( const std::string &tag,const int value){ xmlprintf(tag,"","%d",value); }
     void xmloutl(const std::string &tag,const long value){ xmlprintf(tag,"","%ld",value); }
 #ifdef WIN32
-#error - need to implement this
+    //#error - need to implement this
 #else
     void xmlout( const std::string &tag,const int64_t value){ xmlprintf(tag,"","%"PRId64,value); }
     void xmlout( const std::string &tag,const uint64_t value){ xmlprintf(tag,"","%"PRIu64,value); }
